--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Form Validation</title>
 </head>
 <body class="p-4 bg-indigo-400">
-    <div class="flex flex-col justify-center items-center mx-auto my-60 space-y-4  rounded-sm border-2 p-4 w-1/2 md:w-1/2 lg:w-1/3 xl:w-1/4">
+    <div class="flex flex-col  w-56 md:w-1/2 lg:w-1/3 xl:w-1/4 justify-center items-center mx-auto  my-60 space-y-4  rounded-sm border-2 p-2 ">
         <h1 class=" flex-col justify-center items-center text-2xl text-center text-white">Form Validate</h1>
         <form class="flex flex-col justify-center items-center text-center space-y-4" onsubmit="return false">
             <input class="border-2 p-1 w-full border-slate-600 rounded-sm placeholder-slate-500" type="text" id="name" required placeholder="Enter name.." />
